examples/test/testpolicy2084.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2084
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key35: value10
      key31: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value44
          key8: value23
      podSelector:
        matchLabels:
          key5: value2
          key16: value46
          key44: value10
